--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -238,7 +238,13 @@
 			<version>3.7.0</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>2.6.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<resources>
